--- a/index.html
+++ b/index.html
@@ -2,19 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body ng-app = "MyApp" layout="column"
   ng-controller= "UserController as ul">
 
-      <md-toolbar layout="row">
+    <md-toolbar layout="row">
+      <md-button
+        hide-gt-sm
+        class="menu"
+        ng-click="ul.toggleList()"
+        aria-label="Show User List">
+
+          <md-icon md-svg-icon="menu" ></md-icon>
+
+      </md-button>
       <h3>Angular Material - Voting App</h3>
-      </md-toolbar>
+    </md-toolbar>
       <!-- Wireframe Container #2 -->
      <div flex layout="row">
         <!-- Wireframe Container #3 -->
-        <md-sidenav md-is-locked-open="true" class="md-whiteframe-4dp">
+        <md-sidenav
+          md-component-id="left"
+          md-is-locked-open="$mdMedia('gt-sm')"
+          ng-click="ul.toggleList()"
+          class="md-whiteframe-4dp" >
           <md-list>
             <md-list-item ng-repeat="u in ul.users">
                 <md-button ng-click="ul.selectUser(u)" ng-class="{'selected' : u === ul.selected }">
