--- a/index.html
+++ b/index.html
@@ -1,62 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8"/>
+
+<head>
+    <meta charset="utf-8" />
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css" />
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body ng-app = "MyApp" layout="column"
-  ng-controller= "UserController as ul">
+</head>
+
+<body ng-app="MyApp" layout="column" ng-controller="LController as ul">
 
     <md-toolbar layout="row">
-      <md-button
-        hide-gt-sm
-        class="menu"
-        ng-click="ul.toggleList()"
-        aria-label="Show User List">
-
-          <md-icon md-svg-icon="menu" ></md-icon>
-
-      </md-button>
-      <h3>Angular Material - Voting App</h3>
+        <md-button hide-gt-sm class="menu" ng-click="ul.toggleList()" aria-label="Show Team List">
+            <md-icon md-svg-icon="menu"></md-icon>
+        </md-button>
+        <h3>Angular Material - European Leagues App</h3>
     </md-toolbar>
-      <!-- Wireframe Container #2 -->
-     <div flex layout="row">
-        <!-- Wireframe Container #3 -->
-        <md-sidenav
-          md-component-id="left"
-          md-is-locked-open="$mdMedia('gt-sm')"
-          ng-click="ul.toggleList()"
-          class="md-whiteframe-4dp" >
-          <md-list>
-            <md-list-item ng-repeat="u in ul.users">
-                <md-button ng-click="ul.selectUser(u)" ng-class="{'selected' : u === ul.selected }">
-                  <img class="avatar" ng-src="{{u.avatar}}">
-                  {{u.name}}
-                </md-button>
-            </md-list-item>
-          </md-list>
+
+
+
+
+    <div flex layout="row">
+        <md-sidenav md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" ng-click="ul.toggleList()" class="md-whiteframe-4dp">
+            <md-list>
+                <md-list-item ng-repeat="u in ul.teams">
+                    <md-button ng-click="ul.selectTeam(u)">
+                        <img class="avatar" ng-src="{{u.crestUrl}}"> {{u.name}}
+                    </md-button>
+                </md-list-item>
+            </md-list>
         </md-sidenav>
 
         <!-- Wireframe Container #4 -->
         <md-content flex id="content">
-          <img class="avatar" ng-src="{{ul.selected.avatar}}">
-          <h2>{{ul.selected.name}}</h2>
-          <p>{{ul.selected.content}}</p>
+            <md-content layout="row" class="md-padding">
+                <md-nav-bar md-selected-nav-item="ul.selectedLeague" nav-bar-aria-label="league links" ng-repeat="l in ul.leagues">
+                    <md-nav-item md-nav-click="goto('l.caption')" ng-click="ul.selectLeague(l)" name={{l.caption}}>{{l.caption}}</md-nav-item>
+                </md-nav-bar>
+            </md-content>
+            <div ng-if="!ul.selected.crestUrl">
+                <h1>Welcome to European Leagues App</h1>
+                <h2>First , Please pick any league you want to get teams </h2>
+                <h2>Second , Please pick any team you want to get players infos</h2>
+                <h4>This website is giving info for season of 2015 due to API restrictions, I hope it will be updated very soon by its provider</h4>
+                <h5>Also couple of team of picures are missing due to API broken links, I will update them with not found image next update</h5>
+            </div>
+
+            <md-button ng-if="ul.selected.crestUrl" aria-label="Show Team Info">
+                <div layout="row">
+                    <div flex="auto">
+                        <img class="avatar" ng-src="{{ul.selected.crestUrl}}">
+                    </div>
+                    <div flex="auto">
+                        <h2>{{ul.selected.name}}</h2>
+                        <p>Market Value : {{ul.selected.squadMarketValue}}</p>
+                    </div>
+                </div>
+            </md-button>
+
+
+            <md-list>
+                <md-list-item ng-if="ul.selected.crestUrl" ng-repeat="p in ul.players">
+                    <md-button aria-label="Show Player List">
+                        <div flex layout="row">
+                            <div flex="5">
+                                <b>{{p.jerseyNumber}}</b>
+                            </div>
+                            <div flex="35">
+                                <b>{{p.name}}</b>
+                            </div>
+                            <div flex="25">
+                                {{p.position}}
+                            </div>
+                            <div flex="25">
+                                {{p.nationality}}
+                            </div>
+                            <div flex="10">
+                                {{p.marketValue}}
+                            </div>
+                        </div>
+                    </md-button>
+                </md-list-item>
+            </md-list>
         </md-content>
 
-     </div>
+    </div>
 
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="node_modules/angular-aria/angular-aria.min.js"></script>
     <script src="node_modules/angular-material/angular-material.min.js"></script>
 
-    <script src="Users.js"></script>
-    <script src="UserService.js"></script>
-    <script src="UserController.js"></script>
+    <script src="league.js"></script>
+    <script src="LService.js"></script>
+    <script src="LController.js"></script>
     <script src="index.js"></script>
-  </body>
+</body>
 
 </html>
